--- a/index.html
+++ b/index.html
@@ -5,38 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>학교 선거 개표 관리자</title>
   <style>
-    * { box-sizing: border-box; font-family: 'Pretendard', 'Segoe UI', sans-serif; }
-    body { margin: 0; background: #0e1117; color: #f0f0f0; }
-    header {
-      background: #1a2238; padding: 1.2rem 2rem;
-      font-size: 1.6rem; font-weight: bold;
-      border-bottom: 2px solid #304b99;
+    * { box-sizing: border-box; font-family: 'Pretendard','Segoe UI',sans-serif; }
+    body { margin:0; background:#0e1117; color:#f0f0f0; overflow-x:hidden; }
+    header { background:#1a2238; padding:1.2rem 2rem; font-size:1.6rem; font-weight:bold; border-bottom:2px solid #304b99; text-align:center; }
+    main { max-width:900px; margin:2rem auto; padding:2rem; background:#161b26; border-radius:12px; box-shadow:0 0 15px rgba(0,0,0,0.3); }
+    h2 { border-left:5px solid #3a6ff8; padding-left:10px; margin-top:2rem; display:flex; justify-content:space-between; align-items:center;}
+    .candidate-list { display:grid; gap:1rem; margin-top:1rem; }
+    .candidate-item { display:flex; justify-content:space-between; align-items:center; background:#20283a; padding:1rem; border-radius:8px; position:relative;}
+    .info { display:flex; align-items:center; gap:1rem;}
+    input[type="text"],input[type="number"]{ background:#121826; color:white; border:1px solid #3a6ff8; border-radius:6px; padding:6px 10px; width:120px;}
+    button{ background:#3a6ff8; border:none; color:white; padding:8px 16px; border-radius:8px; cursor:pointer; transition:0.2s;}
+    button:hover{ background:#5888ff;}
+    .delete-btn{ background:#c0392b;}
+    .status{ margin-top:1.5rem; text-align:center; color:#88ffb6;}
+    .add-form{ display:flex; gap:0.5rem; margin-top:1rem;}
+    .percent{ color:#7fd4ff; font-size:0.9rem; margin-left:6px;}
+    .badge{ background:#ffb347; color:#000; font-weight:bold; padding:3px 8px; border-radius:6px; position:absolute; top:-10px; right:-10px; font-size:0.8rem; box-shadow:0 0 5px rgba(0,0,0,0.4);}
+    .turnout-box{ margin-top:2rem; padding:1rem; background:#20283a; border-radius:8px;}
+    /* 전체화면 오버레이 */
+    #winnerOverlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.95);
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+      color: white;
       text-align: center;
+      animation: fadeIn 0.5s ease;
     }
-    main { max-width: 900px; margin: 2rem auto; padding: 2rem; background: #161b26; border-radius: 12px; box-shadow: 0 0 15px rgba(0,0,0,0.3); }
-    h2 { border-left: 5px solid #3a6ff8; padding-left: 10px; margin-top: 2rem; }
-    .candidate-list { display: grid; gap: 1rem; margin-top: 1rem; }
-    .candidate-item {
-      display: flex; justify-content: space-between; align-items: center;
-      background: #20283a; padding: 1rem; border-radius: 8px;
-    }
-    .info { display: flex; align-items: center; gap: 1rem; }
-    input[type="text"], input[type="number"] {
-      background: #121826; color: white; border: 1px solid #3a6ff8;
-      border-radius: 6px; padding: 6px 10px; width: 120px;
-    }
-    button {
-      background: #3a6ff8; border: none; color: white;
-      padding: 8px 16px; border-radius: 8px; cursor: pointer;
-      transition: 0.2s;
-    }
-    button:hover { background: #5888ff; }
-    .delete-btn { background: #c0392b; }
-    .status { margin-top: 1.5rem; text-align: center; color: #88ffb6; }
-    .add-form { display: flex; gap: 0.5rem; margin-top: 1rem; }
-    .bar { height: 8px; border-radius: 4px; background: #3a6ff8; margin-top: 5px; transition: width 0.3s ease; }
-    .percent { color: #7fd4ff; font-size: 0.9rem; margin-left: 6px; }
-    .turnout-box { margin-top: 2rem; padding: 1rem; background: #20283a; border-radius: 8px; }
+    #winnerOverlay h1 { font-size: 5rem; margin-bottom: 1rem; color:#00d8ff;}
+    #winnerOverlay h2 { font-size: 2rem; margin-bottom: 0.5rem;}
+    #winnerOverlay p { font-size: 1.5rem; color:#ccc;}
+    @keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
   </style>
 </head>
 <body>
@@ -55,6 +58,13 @@
     <div class="status" id="status">Firestore 연결 중...</div>
   </main>
 
+  <!-- 전체화면 오버레이 -->
+  <div id="winnerOverlay" onclick="closeOverlay()">
+    <h2>당선</h2>
+    <h1 id="winnerName">홍길동</h1>
+    <p id="winnerDetail">득표율 52.3%</p>
+  </div>
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
     import {
@@ -65,14 +75,11 @@
     const firebaseConfig = {
       apiKey: "AIzaSyCLge3LmR3bCTb7gKnVMVh2s_xt7zpdQYg",
       authDomain: "votesystemserver.firebaseapp.com",
-      projectId: "votesystemserver",
-      storageBucket: "votesystemserver.firebasestorage.app",
-      messagingSenderId: "1091638887745",
-      appId: "1:1091638887745:web:7a6f54b6900c04839fcdc0"
+      projectId: "votesystemserver"
     };
-
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
+
     const positions = [
       { key: "president", label: "회장" },
       { key: "vp_3rd", label: "3학년 부회장" },
@@ -84,7 +91,10 @@
     positions.forEach(pos => {
       const section = document.createElement("section");
       section.innerHTML = `
-        <h2>${pos.label}</h2>
+        <h2>
+          ${pos.label}
+          <button onclick="showWinner('${pos.key}')">🏆 당선 발표</button>
+        </h2>
         <div id="${pos.key}" class="candidate-list"></div>
         <div class="add-form">
           <input type="text" id="name-${pos.key}" placeholder="후보 이름" />
@@ -111,11 +121,15 @@
           totalVotes += Number(data.votes || 0);
         });
 
-        candidates.forEach(c => {
+        // 득표순 정렬
+        candidates.sort((a,b)=>b.votes - a.votes);
+
+        candidates.forEach((c, i) => {
           const percent = totalVotes ? ((c.votes / totalVotes) * 100).toFixed(1) : 0;
           const div = document.createElement('div');
           div.className = 'candidate-item';
           div.innerHTML = `
+            ${i === 0 ? '<div class="badge">당선 유력</div>' : ''}
             <div class="info">
               <span>${c.name}</span>
               <input type="number" id="votes-${pos.key}-${c.id}" value="${c.votes}" />
@@ -132,6 +146,7 @@
       document.getElementById("status").textContent = "✅ Firestore 연결됨 (실시간 반영 중)";
     }
 
+    // 후보 추가/수정/삭제는 기존과 동일
     window.addCandidate = async function(position) {
       const name = document.getElementById(`name-${position}`).value.trim();
       const votes = Number(document.getElementById(`votes-${position}`).value) || 0;
@@ -167,9 +182,33 @@
         document.getElementById('totalVoters').value = metaDoc.data().totalVoters || '';
       }
     }
-
     loadTurnout();
     renderCandidates();
+
+    // 🏆 당선 발표 전체화면 표시
+    window.showWinner = async function(position) {
+      const snap = await getDocs(collection(db, `elections/2025/${position}`));
+      const candidates = [];
+      let totalVotes = 0;
+      snap.forEach(d => { candidates.push(d.data()); totalVotes += d.data().votes; });
+      if (!candidates.length) return alert("후보가 없습니다!");
+
+      candidates.sort((a,b)=>b.votes - a.votes);
+      const winner = candidates[0];
+      const percent = totalVotes ? ((winner.votes / totalVotes)*100).toFixed(1) : 0;
+
+      document.getElementById("winnerName").textContent = winner.name;
+      document.getElementById("winnerDetail").textContent = `득표율 ${percent}%`;
+      document.getElementById("winnerOverlay").style.display = "flex";
+    }
+
+    window.closeOverlay = function(){
+      document.getElementById("winnerOverlay").style.display = "none";
+    };
+
+    document.addEventListener("keydown",(e)=>{
+      if(e.key==="Escape") closeOverlay();
+    });
   </script>
 </body>
 </html>
